# hajen-engine

./: .gitignore  README.md  pyproject.toml  requirements.txt  run.py
hajen_engine/: __init__.py  run.py
hajen_engine.egg-info/: SOURCES.txt  top_level.txt
hajen_engine/classes/: classes.py
hajen_engine/core/: core.py
hajen_engine/custom_types/: communication.py  core.py  task_tracker.py
hajen_engine/drivers/template_driver/: main.py
hajen_engine/hajen_engine.egg-info/: SOURCES.txt
hajen_engine/libs/: communication.py  core.py
hajen_engine/processes/template_process/: main.py
hajen_engine/types/: communication.py  core.py  shared.py  task_tracker.py
src/classes/: classes.py
src/core/: core.py
src/custom_types/: communication.py  core.py  task_tracker.py
src/drivers/template_driver/: main.py
src/hajen_engine/: run.py
src/hajen_engine.egg-info/: PKG-INFO
src/hajen_engine/classes/: classes.py
src/hajen_engine/core/: core.py
src/hajen_engine/hajen_engine.egg-info/: top_level.txt
src/hajen_engine/processes/template_process/: main.py
src/processes/template_process/: main.py
tests/: test_base_class.py  test_task_tracker.py
