[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "hajen-engine"
version = "0.0.1b0"
authors = [
  { name="pinghajen", email="pinghajen@gmail.com" },
]
description = "Runs multiple asyncio loops on different cores"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pinghajen/hajen-engine"
"Bug Tracker" = "https://github.com/pinghajen/hajen-engine/issues"

